# GPU-RSCode

./: .directory  .gitignore  AUTHORS  CTHPC.html  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  index.html  thesis-pdf.html  thesis.html
css/: custom.css  reveal.css  reveal.min.css
css/theme/: serif.css
doc/: design.bib  design.tex  slide.tex
doc/result-graph/: .directory
doc/schematic-diagram/: .directory  GPUdecode.dot  GPUdecode.ps  GPUencode.dot  GPUencode.ps  decode.dot  decode.ps  e-c.dot  e-c.ps  encode.dot  encode.ps  replica.dot  replica.ps
examples/: barebones.html  embedded-media.html  math.html  slide-backgrounds.html
images/: .directory
images/dot-graph/: .directory  GPUdecode.dot  GPUdecode.eps  GPUdecode.ps  GPUencode.dot  GPUencode.eps  GPUencode.ps  decode.dot  decode.ps  e-c.dot  e-c.ps  encode.dot  encode.ps  pageableDataTransfer.dot  pageableDataTransfer.eps  pageableDataTransfer.ps  pinnedDataTransfer.dot  pinnedDataTransfer.eps  pinnedDataTransfer.ps  replica.dot  replica.ps
images/dot-graph/roadmap/: roadmap-0.dot  roadmap-comm-0.dot  roadmap-comm-0.eps  roadmap-comm-1.dot  roadmap-comm-1.eps  roadmap-galois-0.dot  roadmap-galois-0.eps  roadmap-galois-1.dot  roadmap-galois-1.eps  roadmap-galois-2.dot  roadmap-galois-2.eps  roadmap-galois-3.dot  roadmap-galois-4.dot  roadmap-galois-4.eps  roadmap-mm-0.dot  roadmap-mm-0.eps  roadmap-mm-1.dot  roadmap-mm-1.eps  roadmap-mm-2.dot  roadmap-mm-2.eps  roadmap-total.dot  roadmap-total.eps
images/exp/DM generation/: DM-comp.eps  DMFig.m  DMTime.mat
images/exp/GPUvsCPU/: GPUvsCPU.eps  GPUvsCPU.mat  GPUvsCPUFig.m
images/exp/log&exp table/: logExp.mat  logExpFig.m  sMem-vs-cMem.eps
images/exp/log&exp table/high-occupancy/: LogExpNew.mat  logExpFig.asv  logExpFig.m  rotateticklabel.m  sMem-vs-cMem.eps
images/exp/metrics/: metrics.mat  metricsFig.asv  metricsFig.m  metrics_name.mat
images/exp/pageable vs. pinned/: comm-comp.eps  commCompFig.m  memComp.mat
images/exp/step-perf/: avgCompComm.eps  avgCompCommFig.m  cpuAndStepFinalPerf.eps  cpuAndStepFinalPerfFig.m  cpuAndStepPerf.eps  cpuAndStepPerfFig.eps  cpuAndStepPerfFig.m  medianCompComm.eps  medianCompCommFig.m  medianStepBreakdown - backup.mat  medianStepBreakdown.eps  medianStepBreakdown.mat  medianStepBreakdownFig.m  stepBW.eps  stepBWFig.m  stepBreakdown-CPU.mat  stepBreakdown.eps  stepBreakdown.mat  stepBreakdownCPU.eps  stepBreakdownCPU.mat  stepBreakdownFig.m  stepBreakdownFigCPU.m  stepPerf.eps  stepPerfFig.m  timeCPUPerStep.mat  timePerStep.mat
images/exp/stream/: k2n3zeroStreamSpeedup.mat  k2n3zeroStreamSpeedupFig.m  k2n3zeroStreamTime.mat  k2n3zeroStreamTimeFig.m  speedup-zero-file(k=2).eps  time-zero-file(k=2).eps
images/exp/stream/detailed/: k2n3zeroStreamTime.eps  k2n3zeroStreamTime.mat  k2n3zeroStreamTimeFig.m  k2n3zeroStreamTotalSpeedup.eps  k2n3zeroStreamTotalSpeedup.mat  k2n3zeroStreamTotalSpeedupFig.m
images/exp/stream/random/: k2n3random-4StreamScaleSpeedup.eps  k2n3randomSpeedup.mat  k2n3randomSpeedupFig.m  k2n3randomStreamNum.eps  k2n3randomStreamNum.mat  k2n3randomStreamNumFig.m  k2n3randomStreamScaleSpeedupFig.m  k2n3randomStreamSpeedup.eps  k2n3randomStreamTime.eps  k2n3randomStreamTimeFig.m  k2n3randomStreamTotalSpeedup.eps  k2n3randomStreamTotalSpeedupFig.m
images/exp/stream/weak-scaling-tuning/: k2n3zeroRatio.mat  k2n3zeroRatioFig.m  k2n3zeroTime.mat  k2n3zeroTimeFig.m  ratio-zero-file-tuning(k=2).eps  time-zero-file-tuning(k=2).eps
images/exp/table-based vs. loop-based/chunk-size-scaling-k1M_64M/: BWFig.m  chunkSizeScaling.mat  encode-BW.eps
images/exp/tiling strategies/: 2TB-tiling-strategies.eps  tiling2TBFig.m
images/exp/tiling strategies/10cases/: 2TB-tiling-strategies.eps  ratio.mat  tiling2TBFig.m
images/exp/tiling strategies/align/: 2TB-tiling-strategies.eps  alu-op.eps  branch.eps  cf_executed.mat  cf_executedFig.m  flops_spFig.m  gld_transactions.mat  gld_transactionsFig.m  global-load.eps  global-store.eps  gst_transactions.mat  gst_transactionsFig.m  ratio - bak.mat  ratio.mat  tiling2TBFig.m
images/exp/tiling strategies/testcases-V3/: 2TB-tiling-strategies.eps  branchNum.eps  branchNumFig.m  ratio - bak -2.mat  ratio - bak.mat  ratio.mat  tiling2TBFig.m
images/matrix-multiplication/: basic.dia  square-tiling.dia  tiling-ALU-1.dia  tiling-align - 1.dia  tiling-align - 2.dia  tiling-align - 3.dia  tiling-align - 4.dia  tiling-align - 5.dia  tiling-align-load-1.dia  tiling-align-load-2.dia  tiling-align-load-3.dia  tiling-align-load.dia  tiling-align.dia  tiling-load-1.dia  tiling-load-2.dia  tiling-load-3.dia  tiling-load.dia  tiling-tileDepth-0.dia  tiling-tileDepth-1.dia  tiling-tileDepth-2.dia  tiling-tileWidth(AR=1).dia  tiling-tileWidth.dia  tiling.dia  tiling.tex  without-tiling - 1.dia  without-tiling - 2.dia  without-tiling - 3.dia  without-tiling.dia
src/: .depend  GaloisFieldValue.cpp  GaloisFieldValue.hpp  Makefile  Makefile.am  Makefile.in  Matrix.cpp  Matrix.hpp  ReedSolomon.cpp  conf  cpu-decode.c  cpu-decode.h  cpu-rs-double.c  cpu-rs-full.c  cpu-rs-log-exp-0.c  cpu-rs-log-exp-1.c  cpu-rs-log-exp-2.c  cpu-rs-log-exp-3.c  cpu-rs-log-exp.c  cpu-rs-loop.c  cpu-rs.c  decode-gj.cu  decode.cu  decode.h  encode-BFS-stream.cu  encode-DFS-stream.cu  encode.cu  encode.h  galoisfield.cu  galoisfield.h  gen_gf16.c  gen_gf256_V0.c  gen_gf256_V1.c  gen_gf256_V2.c  gen_gf256_V3.c  gf16.h  gf256_V0.h  gf256_V1.h  gf256_V2.h  gf256_V3.h  (+15 more)
